WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
103853
Fix text direction in datalist popup for time controls
https://bugs.webkit.org/show_bug.cgi?id=103853
Summary
Fix text direction in datalist popup for time controls
Keishi Hattori
Reported
2012-12-02 22:03:55 PST
Fix text direction in datalist popup for time controls
Attachments
Patch
(214.37 KB, patch)
2012-12-02 22:15 PST
,
Keishi Hattori
no flags
Details
Formatted Diff
Diff
Patch
(315.22 KB, patch)
2012-12-02 23:01 PST
,
Keishi Hattori
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Keishi Hattori
Comment 1
2012-12-02 22:15:18 PST
Created
attachment 177179
[details]
Patch
Kent Tamura
Comment 2
2012-12-02 22:31:00 PST
Comment on
attachment 177179
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=177179&action=review
> Source/WebCore/Resources/pagepopups/suggestionPicker.css:46 > +.locale-rtl .suggestion-list-entry .title { > + direction: rtl; > +}
We had better have tests for this case.
Keishi Hattori
Comment 3
2012-12-02 23:01:00 PST
Created
attachment 177186
[details]
Patch
WebKit Review Bot
Comment 4
2012-12-03 02:30:19 PST
Comment on
attachment 177186
[details]
Patch Rejecting
attachment 177186
[details]
from commit-queue. New failing tests: inspector-protocol/debugger-terminate-dedicated-worker-while-paused.html Full output:
http://queues.webkit.org/results/15097478
WebKit Review Bot
Comment 5
2012-12-05 04:57:26 PST
Comment on
attachment 177186
[details]
Patch Clearing flags on attachment: 177186 Committed
r136674
: <
http://trac.webkit.org/changeset/136674
>
WebKit Review Bot
Comment 6
2012-12-05 04:57:29 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug