Fix text direction in datalist popup for time controls https://bugs.webkit.org/show_bug.cgi?id=103853

Reviewed by Kent Tamura.

Source/WebCore:

The datalist entry value should be displayed with the same text direction as the date/time format.

Tests: platform/chromium/fast/forms/suggestion-picker/datetime-suggestion-picker-appearance-locale-hebrew.html
       platform/chromium/fast/forms/suggestion-picker/datetimelocal-suggestion-picker-appearance-locale-hebrew.html
       platform/chromium/fast/forms/suggestion-picker/time-suggestion-picker-appearance-locale-hebrew.html

* Resources/pagepopups/calendarPicker.js: Renamed isCalendarRTL to isLocaleRTL.
(CalendarPicker.prototype._layout):
(CalendarPicker.prototype.fixWindowSize):
(DaysTable.prototype._handleKey):
(MonthPickerDaysTable.prototype._handleKey):
(WeekPickerDaysTable.prototype._handleKey):
* Resources/pagepopups/suggestionPicker.css:
(.suggestion-list-entry .title): Title should have the same text direction as the locale.
(.locale-rtl .suggestion-list-entry .title):
* Resources/pagepopups/suggestionPicker.js:
(SuggestionPicker.prototype._layout): Add locale-rtl class if the isLocaleRTL is true.

Source/WebKit/chromium:

* src/DateTimeChooserImpl.cpp:
(WebKit::DateTimeChooserImpl::writeDocument): Renamed isCalendarRTL to isLocaleRTL.

LayoutTests:

* platform/chromium-mac/platform/chromium/fast/forms/suggestion-picker/datetime-suggestion-picker-appearance-locale-hebrew-expected.png: Added.
* platform/chromium-mac/platform/chromium/fast/forms/suggestion-picker/datetime-suggestion-picker-appearance-rtl-expected.png:
* platform/chromium-mac/platform/chromium/fast/forms/suggestion-picker/datetimelocal-suggestion-picker-appearance-locale-hebrew-expected.png: Added.
* platform/chromium-mac/platform/chromium/fast/forms/suggestion-picker/datetimelocal-suggestion-picker-appearance-rtl-expected.png:
* platform/chromium-mac/platform/chromium/fast/forms/suggestion-picker/time-suggestion-picker-appearance-locale-hebrew-expected.png: Added.
* platform/chromium-mac/platform/chromium/fast/forms/suggestion-picker/time-suggestion-picker-appearance-rtl-expected.png:
* platform/chromium/TestExpectations:
* platform/chromium/fast/forms/suggestion-picker/datetime-suggestion-picker-appearance-locale-hebrew-expected.txt: Added.
* platform/chromium/fast/forms/suggestion-picker/datetime-suggestion-picker-appearance-locale-hebrew.html: Added.
* platform/chromium/fast/forms/suggestion-picker/datetimelocal-suggestion-picker-appearance-locale-hebrew-expected.txt: Added.
* platform/chromium/fast/forms/suggestion-picker/datetimelocal-suggestion-picker-appearance-locale-hebrew.html: Added.
* platform/chromium/fast/forms/suggestion-picker/time-suggestion-picker-appearance-locale-hebrew-expected.txt: Added.
* platform/chromium/fast/forms/suggestion-picker/time-suggestion-picker-appearance-locale-hebrew.html: Added.


Canonical link: https://commits.webkit.org/122256@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@136674 268f45cc-cd09-0410-ab3c-d52691b4dbfc