Source/WebCore/Resources/pagepopups/suggestionPicker.js
@@ -167,6 +167,8 @@ SuggestionPicker.prototype._fixWindowSize = function() {
 SuggestionPicker.prototype._layout = function() {
     if (this._config.isRTL)
         this._element.classList.add("rtl");
+    if (this._config.isLocaleRTL)
+        this._element.classList.add("locale-rtl");
     this._containerElement = createElement("ul", "suggestion-list");
     this._containerElement.addEventListener("click", this._handleEntryClick.bind(this), false);
     for (var i = 0; i < this._config.suggestionValues.length; ++i) {
